--- a/localisation/TD_01_flavour_ansgarland_l_english.yml
+++ b/localisation/TD_01_flavour_ansgarland_l_english.yml
@@ -15,4 +15,15 @@
  ansgarland_absolute_authority:0 "Absolute Authority"
  ansgarland_absolute_authority_desc:0 "The will of the king is indusputable - for many in these times this sentence seems to be obvious, but it wasn't always the case in these lands. Both glasians and silvestrines have always had a traditional popular assembly consisting of the ruler and the nobility, but after the great king Ansgar and his descendants have shown that the true power comes from centralization."
  ansgarland_koniginsmarine:0 "Königinsmarine"
- ansgarland_koniginsmarine_desc:0 "For the majority of history the fleet was seen as an afterthought, a simple tool to use when needed. When the age of colonization came, the need for a large fleet to maintain the lands oversea became a necessity to project one's own power over other nations. This potential was seen by Queen Mathilda, who was the first to massively invest in our fleet, which became known as Königinsmarine to honor her efforts. "
+ ansgarland_koniginsmarine_desc:0 "For the majority of history the fleet was seen as an afterthought, a simple tool to use when needed. When the age of colonization came, the need for a large fleet to maintain the lands oversea became a necessity to project one's own power over other nations. This potential was seen by Queen Mathilda, who was the first to massively invest in our fleet, which became known as Königinsmarine to honor her efforts."
+
+ ansgarland.1.t:0 "Ties of [Root.Monarch.Dynasty.GetName] dynasty"
+ ansgarland.1.desc:0 "Lorem ipsum"
+ ansgarland.1.a:0 "We will trust [geoberic_heir_source_et.GetName]"
+ ansgarland.1.a_tt:0 "We will fall under a Personal Union with the specified Country."
+ ansgarland.1.b:0 "I'm sure one of my cousins will be a great heir..."
+ ansgarland.1.c:0 "I WILL produce an heir, I promise."
+ ansgarland.2.t:0 "Devil's Due"
+ ansgarland.2.desc:0 "sad"
+ ansgarland.2.a:0 "Change the world. My final message. Goodbye."
+ 
