--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -50,6 +50,8 @@
  COLONIAL_thiccet_ADJ:0 "Thiccetian"
  COLONIAL_neumark:0 "Neumark"
  COLONIAL_neumark_ADJ:0 "Neumarker"
+ COLONIAL_ravdnjesveahkki:0 "Ravdnjesveahkki"
+ COLONIAL_ravdnjesveahkki_ADJ:0 "Ravdnjesveahkkian"
  COLONIAL_Root_Culture_GetName_tarhia:0 "[Root.GetAdjective] Tarhia"
  COLONIAL_Root_Culture_GetName_tarhia_ADJ:0 "[Root.GetAdjective] Tarhian"
 
