Monuments and broken missions
Ironically, Missions are only broken beacuse i remodeled the upper part like Danieczek wanted, while out of 10 new monuments added, one is half-broken and another wasn't fully tested beacuse paradox didn't add debug commands for spawning embraceable institutions. :)

--- a/localisation/TD_03_missions_generic_l_english.yml
+++ b/localisation/TD_03_missions_generic_l_english.yml
@@ -21,59 +21,44 @@
  gen_hre_republic_reform_government_desc:0 "We must take up new ways and reform our administration into a modern [Root.GovernmentName] if it is to survive the changes sweeping across Taedium."
 
 
- TD_Generic_Start_Military_title:0 "Build an Army"
+ TD_Generic_Start_Military_title:0 "Expand our Army"
  TD_Generic_Start_Military_desc:0 ""
- TD_Generic_Military_1_title:0 "Force to Recon With"
+ TD_Generic_Military_1_title:0 "New Military Infrastructure"
  TD_Generic_Military_1_desc:0 ""
- TD_Generic_Military_2_title:0 "Fund Military Infrastructure"
+ TD_Generic_Military_2_title:0 "Force to Recon With"
  TD_Generic_Military_2_desc:0 ""
- TD_Generic_Military_3_title:0 "A Standing Army"
+ TD_Generic_Military_3_title:0 "Reform our Military"
  TD_Generic_Military_3_desc:0 ""
- TD_Generic_Military_4_title:0 "Reform the Army"
- TD_Generic_Military_4_desc:0 ""
- TD_Generic_Start_Diplo_title:0 "Find Allies"
+ TD_Generic_Start_Diplo_title:0 "Guarantee our Survival"
  TD_Generic_Start_Diplo_desc:0 ""
- TD_Generic_Diplo_1_title:0 "Manage Diplomacy"
+ TD_Generic_Diplo_1_title:0 "Reinforce our Legitimacy"
  TD_Generic_Diplo_1_desc:0 ""
- TD_Generic_Diplo_2_title:0 "Trade Expansion"
+ TD_Generic_Diplo_2_title:0 "Rethink our Administration"
  TD_Generic_Diplo_2_desc:0 ""
- TD_Generic_Diplo_3_title:0 "Politics of Interest"
- TD_Generic_Diplo_3_desc:0 ""
- TD_Generic_Diplo_4_title:0 "Great Power Politics"
- TD_Generic_Diplo_4_desc:0 ""
- TD_Generic_Start_Admin_title:0 "Prepare the Economy"
+ TD_Generic_Start_Admin_title:0 "Prepare the Treasury"
  TD_Generic_Start_Admin_desc:0 ""
+ TD_Generic_Admin_Poststart_title:0 "Reinvest into Economy"
+ TD_Generic_Admin_Poststart_desc:0 ""
  TD_Generic_Admin_1_title:0 "Develop the Countryside"
  TD_Generic_Admin_1_desc:0 ""
- TD_Generic_Admin_2_title:0 "Fund Civilian Infrastructure"
+ TD_Generic_Admin_2_title:0 "Increase our Income"
  TD_Generic_Admin_2_desc:0 ""
- TD_Generic_Admin_3_title:0 "Invest in Production"
- TD_Generic_Admin_3_desc:0 ""
- TD_Generic_Admin_4_title:0 "Build Manufactories"
- TD_Generic_Admin_4_desc:0 ""
- TD_Generic_Start_Middle_title:0 "Means of Expansion"
+ TD_Generic_Start_Middle_title:0 "Expand our Realm"
  TD_Generic_Start_Middle_desc:0 ""
- TD_Generic_Middle_Final_title:0 "Dawn of an Empire"
- TD_Generic_Middle_Final_desc:0 ""
- TD_generic_start_military:0 "Thriving arms industry"
- TD_generic_fabricate_claims:0 "Efficient Claim Fabrication"
- TD_generic_manpower_and_defensivness:0 "Expanded Military Infrastructure"
- TD_generic_discipline:0 "Standing Army"
- TD_generic_drill_loss:0 "Army Reforms"
- TD_generic_army_tradition:0 "Army Reforms"
- TD_generic_improve_rel:0 "Better Alliance Building"
- TD_generic_diplo_rel:0 "Expanded Subject Management"
- TD_generic_diplo_rep:0 "Improved Diplomacy"
- TD_generic_trade_efficiency:0 "Trade Expansion"
- TD_generic_ship_tradepower_trade_range:0 "Politics of Interest"
- TD_generic_army_navy_tradition_decay:0 "Great Power"
- TD_generic_global_autonomy_advisor_cost:0 "Newborn Empire"
- TD_generic_interest_per_annum:0 "War Loans"
- TD_generic_development_cost:0 "Development of the Countryside"
- TD_generic_national_tax_income:0 "Expanded Taxing"
- TD_generic_production_efficiency:0 "Production Investments"
- TD_generic_goods_produced_development_cost_modifier:0 "Expanded Manufactory Output"
- TD_generic_fabricate_claims_tt:0 "If §YBuild an Army§!, §YFind Allies§! and §YPrepare the Economy§! are completed, we will gain §G-50% Fabricate Claim Cost§! for §G10§! Years."
- TD_generic_improve_rel_tt:0 "If this mission is completed while having at least §Y1 Ally§!, we will gain §G+15% Improve Relations§! for §G10§! Years."
- TD_generic_diplo_rel_tt:0 "If this mission is completed while having at least §Y1 Subject§!, we will gain §G+1 Diplomatic Relations§! for §G10§! Years."
+ TD_generic_maintenance_military_tt:0 "If §YExpand our Army§! and §YPrepare the Treasury§! are completed, we will gain §G-10% Land Maintenance Modifier§! for §G10§! Years."
+ TD_generic_improve_rel_tt:0 "If this mission is completed while having §Y2 Allies§!, we will gain §G+15% Improve Relations§! for §G10§! Years."
+ TD_generic_diplo_rep_tt:0 "If this mission is completed while having §Y2 Subjects§!, we will gain §G+1 Diplomatic Reputation§! for §G10§! Years."
  TD_generic_distribute_5_random_dev:0 "5 random owned core provinces will gain §G1 development of random category§!"
+ TD_generic_start_military:0 "Thriving arms industry"
+ TD_generic_maintenance_military:0 "Improved Military Maintenance"
+ TD_generic_movement_and_defensivness:0 "Expanded Military Infrastructure"
+ TD_generic_maintenance_recovery:0 "Standing Army"
+ TD_generic_leader_cost:0 "Army Reforms"
+ TD_generic_improve_rel:0 "Better Alliance Building"
+ TD_generic_diplo_rep:0 "Expanded Subject Management"
+ TD_generic_prestige_stabcost:0 "Legitimate Government"
+ TD_generic_interest_per_annum:0 "War Loans"
+ TD_generic_local_development_cost:0 "Development of the Capital"
+ TD_generic_national_tax_income:0 "Expanded Taxing"
+ TD_generic_construction_bonus:0 "Civilian Infrastructure Investments"
+ TD_generic_inflation_reduction:0 "Monetary Reforms"
