--- a/localisation/government_l_english.yml
+++ b/localisation/government_l_english.yml
@@ -328,6 +328,7 @@
  mechanic_election_on_death_no:0 " " # intentionally empty
  mechanic_is_merchant_republic_yes:1 "Is a §YMerchant Republic§!"
  mechanic_is_merchant_republic_no:0 " " # intentionally empty
+ mechanic_is_merchant_republic:0 "§YMerchant Republic§!"
  lottery_reform:0 "Sortition"
  lottery_reform_desc:0 "Elections by majority votes are prone to corruption or worse, populism. We shall employ a complex system of allotment to determine who should lead our Republic by selecting almost at random from among a pool of suitable candidates."
  appointment_by_committee_reform:0 "Appointment by Committee"
