--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -2,6 +2,14 @@
  province_is_or_accepts_yaltazim_tt:0 "The Religion of §Y[Root.GetName]§! is §YYaltazim§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_saelian_tt:0 "The Religion of §Y[Root.GetName]§! is §YSaelian§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_anhativaz_tt:0 "The Religion of §Y[Root.GetName]§! is §YAnhativaz§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_ilumist_tt:0 "The Religion of §Y[Root.GetName]§! is §YIlumist§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_uttarian_tt:0 "The Religion of §Y[Root.GetName]§! is §YUttarian§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_rah_jadid_tt:0 "The Religion of §Y[Root.GetName]§! is §YRah Jadid§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_kausali_tt:0 "The Religion of §Y[Root.GetName]§! is §YKausali§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_nahitar_tt:0 "The Religion of §Y[Root.GetName]§! is §YNahitar§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_sointuva_tt:0 "The Religion of §Y[Root.GetName]§! is §YSointuva§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_itonatilu_tt:0 "The Religion of §Y[Root.GetName]§! is §YItonatilu§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_lummak_mythologyi_tt:0 "The Religion of §Y[Root.GetName]§! is §YLummak Mythology§! and is either the State or the Syncretic Religion of the owner."
 
  matliman_canal:0 "Matliman Canal"
  barzakhan_canal:0 "Barzakhan Canal"
@@ -29,3 +37,23 @@
 
  mepis_tadzar:0 "Mepis Tadzar"
  mepis_tadzar_desc:0 "Magnificent Tomb turned into a cathedral, vital to the history of Zakarturi Empire."
+ 
+ 
+ ###Names only for now, as there are placeholders for province names
+ holy_mountain_nahitar:0 "Holy Mountain of 1364"
+ holy_mountain_kausali:0 "2122 Mountain Range"
+ uttarian_fire_temple:0 "Vazixan Fire Temple"
+ uttarian_water_temple:0 "Zayamar Water Temple"
+ temple_of_the_sun_god:0 "Temple of the Sun God"
+ grand_temple_of_ilum:0 "Grand temple of Ilum"
+ sointuva_burial_site:0 "Saivomearkka Burial Site"
+ itonatilu_imperial_city:0 "Imperial city of 1425"
+ holy_temple_itonatilu:0 "Holy Temple of 1455"
+ grand_observatory:0 "1207 Grand Observatory"
+ xamanehi_fortress:0 "Xamanehi Fortress of 1213"
+ imperial_city_of_capiranella:0 "Imperial City of Capiranella"
+ summer_castle:0 "The Summer Castle"
+ fortress_of_oelssner:0 "Fortess of Micharl Oelssner"
+ tummic_arsenal:0 "The Grand Arsenal"
+ karajiva_city:0 "Historical City of Karavija"
+ terolian_mining_district:0 "Terolian Mining District"
