great project desc and images

--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -38,22 +38,48 @@
  mepis_tadzar:0 "Mepis Tadzar"
  mepis_tadzar_desc:0 "Magnificent Tomb turned into a cathedral, vital to the history of Zakarturi Empire."
  
- 
- ###Names only for now, as there are placeholders for province names
  holy_mountain_nahitar:0 "Holy Mountain of 1364"
- holy_mountain_kausali:0 "2122 Mountain Range"
- uttarian_fire_temple:0 "Vazixan Fire Temple"
- uttarian_water_temple:0 "Zayamar Water Temple"
- temple_of_the_sun_god:0 "Temple of the Sun God"
- grand_temple_of_ilum:0 "Grand temple of Ilum"
+ holy_mountain_nahitar_desc:0 "These mountains are said to be the cradle of mankind from which the 2 great sister rivers flow - belief central to the nahitar faith."
+
+ holy_mountain_kausali:0 "Askaragihan Peak"
+ holy_mountain_kausali_desc:0 "Meaning revelation mountain, this is where the great Nandak received the true wisdom of God."
+
+ uttarian_fire_temple:0 "Altar of Anoxwardan"
+ uttarian_fire_temple_desc:0 "The most important still functioning temple dedicated to the Uttarian manifestation of fire - Anoxwardan."
+
+ uttarian_water_temple:0 "Temple of Abadih"
+ uttarian_water_temple_desc:0 "Temple dedicated to the Goddess of prosperity and manifestation of water - Abadih."
+
+ temple_of_the_sun_god:0 "The Great Abadag"
+ temple_of_the_sun_god:0 "This temple was created to serve Anoxwardan, but since Rah Jadid domination it has been dedicated to Ilum, the one true god."
+
+ grand_temple_of_ilum:0 "City of Galahar"
+ grand_temple_of_ilum_desc:0 "This ancient Muzbahi capital is the home of one of the most important ilumist and yaltazim prophets - Yusilah."
+
  sointuva_burial_site:0 "Saivomearkka Burial Site"
+ sointuva_burial_site_desc:0 "The most well preserved burial site of Sointuva folklore where many ancient rulers and religious figures are said to be sleeping."
+
  itonatilu_imperial_city:0 "Imperial city of 1425"
+
  holy_temple_itonatilu:0 "Holy Temple of 1455"
- grand_observatory:0 "1207 Grand Observatory"
+
+ grand_observatory:0 "Great Ilchan"
+ grand_observatory_desc:0 "This magnificent observatory was build in the ancient times by the ancestors of Nalanak people, but it serves it function to this day"
+
  xamanehi_fortress:0 "Xamanehi Fortress of 1213"
+
  imperial_city_of_capiranella:0 "Imperial City of Capiranella"
+
  summer_castle:0 "The Summer Castle"
- fortress_of_oelssner:0 "Fortess of Micharl Oelssner"
+ summer_castle_desc:0 "Luxurious palace sitting atop of the granieckie hill, symbol of rule of these areas."
+
+ fortress_of_oelssner:0 "Fort Oelssner"
+ fortress_of_oelssner_desc:0 "Fortified self-sustaining town inhabitated by western merchant population to control the flow of trade through the Mezonian Straits."
+
  tummic_arsenal:0 "The Grand Arsenal"
+ tummic_arsenal_desc:0 "Military arsenal which supplies guns not only to the tummic fleet, but also the great standing army."
+
  karajiva_city:0 "Historical City of Karavija"
+ karajiva_city_desc:0 "One of the oldest cities in the marstonia rebuilded by Ziemelian Valdnieks to solidify the pan-marstonic ambitions."
+
  terolian_mining_district:0 "Terolian Mining District"
