ilumism decision, nahtrucer markgrafs, flags, icons

--- a/localisation/TD_01_flavour_fawud_l_english.yml
+++ b/localisation/TD_01_flavour_fawud_l_english.yml
@@ -53,3 +53,6 @@
  tomb_of_eyina_modifier_desc:0 "This province holds a lot of religious importance to musarfic people."
 
  tomb_of_eyina:0 "Tomb of Eyina"
+
+ convert_to_ilumism_title:0 "Convert to Ilumism"
+ convert_to_ilumism_desc:0 "Ilumism is seen by desert tribes of fawud as something ungodly - created to lead good souls astray. But it also becoming more of a symbol of new ways of living in a more modern world."
