--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -38,7 +38,7 @@
  mepis_tadzar:0 "Mepis Tadzar"
  mepis_tadzar_desc:0 "Magnificent Tomb turned into a cathedral, vital to the history of Zakarturi Empire."
  
- holy_mountain_nahitar:0 "Holy Mountain of 1364"
+ holy_mountain_nahitar:0 "Source of the Fadi"
  holy_mountain_nahitar_desc:0 "These mountains are said to be the cradle of mankind from which the 2 great sister rivers flow - belief central to the nahitar faith."
 
  holy_mountain_kausali:0 "Askaragihan Peak"
