--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -178,12 +178,12 @@
  request_kingship_desc:0 "To solidify our claims to this land, we may requests the emperor of the Saelian Empire to grant us is grace and elevate our ruler to a mighty king."
  saelian.4.t:0 "Prince Requests kingship"
  saelian.4.desc:0 "Earlier this morning a delegation came from one of our prince's regarding granting them a title of kingdom. They argue that this will make collecting imperial taxes easier and potentially be a greater help to the emperor during a time of need. How shall we respond?"
- saelian.4.a:0 "Looks like we have a new king in town"
+ saelian.4.a:0 "Looks like we have a new king in town!"
  saelian.4.b:0 "Preposterous..."
 
  saelian.5.t:0 "Emperor Accepted!"
  saelian.5.desc:0 "Imperial legate came bringing good news - the emperor accepted our petition to become a king."
- saelian.5.a:0 "Let's start planning a coronation"
+ saelian.5.a:0 "Let's start planning the coronation."
  emperor_granted_kingship:0 "Kingship Granted"
 
  saelian.6.t:0 "Emperor Declined!"
