--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -102,3 +102,14 @@
  kakigian_frontier_reform:0 "Kakigian Frontier"
  kakigian_frontier_reform_desc:0 "Fertile soils and mountains rich with resources in Kakigia remain unexploited. The wast steppe awaits anyone willing to tame the brutal hordes."
  kakigian_frontier_reform_tt:0 "Have had §YSelf-sustainable Colonies§! age ability."
+
+ northern_march_reform:0 "Northern March"
+ northern_march_reform_desc:0 "These lands are the remnants of the imperial campaigns north to conquer labosian tribes; by granting the power to localy elected lords it secured a powerful and stable frontier."
+ MARKGRAF:0 "Markgraf"
+ MARKGRAFINE:0 "Markgrafine"
+
+ VALDNIESTE:0 "Valdnieste"
+ VALDNIEK:0 "Valdniek"
+ VALDNIEKA:0 "Valdnieka"
+ KARALIS:0 "Karalis"
+ KARALISA:0 "Karalisa"
