--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -83,3 +83,6 @@
  karajiva_city_desc:0 "One of the oldest cities in the marstonia rebuilded by Ziemelian Valdnieks to solidify the pan-marstonic ambitions."
 
  terolian_mining_district:0 "Terolian Mining District"
+
+ erekle_tsikhe:0 "Erek'les tsikhe"
+ erekle_tsikhe_desc:0 "Greatest fortification in the old world, build by the great king Erekle"
