--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -196,3 +196,9 @@
  saelianism_united_mod:0 "Saelianism Unified"
  random_conversion_tt:0 "Every Saelian province will have a 33% chance to convert to our religion."
  hre_modifier_tt:0 "Reform modifier will be transfered to our newly unified nation."
+
+ saelian.9.t:0 "[Root.GovernmentName] of [Root.Owner.GetName] and the Empire"
+ saelian.9.desc:0 "The wind of change has finally struck [Root.GetName]. With the growing ambitions of glorious [Root.Monarch.GetTitle] [Root.Monarch.GetName] we have reached a point where we are the ones to decide our own fate and not be dependent on other states. This poses important question - should we remain loyal to the emperor or stand on our own in this new and changing world?"
+ saelian.9.a:0 "We shall remain faithful to [Emperor.Monarch.GetName]."
+ saelian.9.b:0 "We shall forge our own path."
+ prince_rejected_kingship:0 "Repressed Ambitions"
