--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -51,7 +51,7 @@
  uttarian_water_temple_desc:0 "Temple dedicated to the Goddess of prosperity and manifestation of water - Abadih."
 
  temple_of_the_sun_god:0 "The Great Abadag"
- temple_of_the_sun_god:0 "This temple was created to serve Anoxwardan, but since Rah Jadid domination it has been dedicated to Ilum, the one true god."
+ temple_of_the_sun_god_desc:0 "This temple was created to serve Anoxwardan, but since Rah Jadid domination it has been dedicated to Ilum, the one true god."
 
  grand_temple_of_ilum:0 "City of Galahar"
  grand_temple_of_ilum_desc:0 "This ancient Muzbahi capital is the home of one of the most important ilumist and yaltazim prophets - Yusilah."
@@ -68,7 +68,7 @@
 
  xamanehi_fortress:0 "Xamanehi Fortress of 1213"
 
- imperial_city_of_capiranella:0 "Imperial City of Capiranella"
+ imperial_city_of_capiranella:0 "City of Capiranella"
 
  summer_castle:0 "The Summer Castle"
  summer_castle_desc:0 "Luxurious palace sitting atop of the granieckie hill, symbol of rule of these areas."
