--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -139,7 +139,7 @@
  RELEASE:0 "Release $WHO|Y$ as an independent state.\n"
  admiralty:0 "Admiralty"
  artisan_workshop:0 "Artisans Workshop"
- cathedral:0 "Cathedral"
+ cathedral:0 "Great Temple"
  constable:0 "Constable"
  courthouse:0 "Courthouse"
  customs_house:0 "Customs House"
@@ -2597,7 +2597,7 @@
  building_spy_agency:0 "Spy Agency"
  building_town_hall:0 "Town Hall"
  building_college:0 "College"
- building_cathedral:0 "Cathedral"
+ building_cathedral:0 "Great Temple"
  building_cathedral_orthodox:0 "Basilica"
  building_armory:0 "Armory"
  building_training_fields:0 "Training Fields"
@@ -2898,7 +2898,7 @@
  AFFORD_SHIP_COST:0 "You cannot afford this ship. You need at least $COST$¤"
  admiralty_short:0 "Admiralty"
  artisan_workshop_short:0 "Artisans Workshop"
- cathedral_short:0 "Cathedral"
+ cathedral_short:0 "Great Temple"
  constable_short:0 "Constable"
  courthouse_short:0 "Courthouse"
  customs_house_short:0 "Customs House"
