Geniburgh Company done
altough some reimplementation of balance still needs to be done, stefus will do it.

--- a/localisation/TD_01_flavour_geniburgh_company_l_english.yml
+++ b/localisation/TD_01_flavour_geniburgh_company_l_english.yml
@@ -5,6 +5,10 @@
  mechanic_is_allowed_to_recruit_mercenaries_no:0 "May not recruit Mercenaries"
  COMPANY:0 "Mercenary Company"
  CAPTAIN:0 "Captain"
+ niewebehatian_monarchy_reform:0 "Niewebehtian Monarchy"
+ niewebehatian_monarchy_reform_desc:0 ""
+ niewebehatian_republic_reform:0 "Niewebehtian Republic"
+ niewebehatian_republic_reform_desc:0 ""
  
  
  
@@ -18,3 +22,7 @@
  NAR_bribed_local_rulers:0 "Bribe local rulers"
  geniburgh_increase_power:0 "Invest in the Administration"
  NAR_Reform_into_a_real_country_TT:0 "§YGeniburgh Company§! will get an event to reform into §YNiewebehatland§!."
+ geniburgh_company.1.t:0 "Assuming Kakigian Identity"
+ geniburgh_company.1.desc:0 "As we settle into this new and strange land, it becomes clear that we have grown beyond a mere mercenary company. We now need to embrace our new identity."
+ geniburgh_company.1.a:0 "Let's reform into a Republic!"
+ geniburgh_company.1.b:0 "We should become a Monarchy!"
