zakarturi content + geniburgh changes

--- a/localisation/TD_01_flavour_geniburgh_company_l_english.yml
+++ b/localisation/TD_01_flavour_geniburgh_company_l_english.yml
@@ -13,10 +13,10 @@
  
  
  ability_geniburgh_company_mechanic:0 "Kakigian Settling Mechanic"
- geniburgh_mercenary_power:0 "Administrative Level"
- geniburgh_mercenary_power_desc:0 "Defines how close Geniburgh Company is close to reforming into a proper country."
- monthly_geniburgh_mercenary_power:0 "Monthly Administrative Level"
- geniburgh_mercenary_power_gain_modifier:0 "Administrative Level Modifier"
+ geniburgh_mercenary_power:0 "Reformation Effort"
+ geniburgh_mercenary_power_desc:0 "Defines how close Geniburgh Company is close to reforming into a proper country.\n§YIncreased by:§!\n -being over governing capacity\n -granting specific privileges\n -promoting local cultures\n -having high republican tradition\n -having high ruler administrative skill\n§YDecreased by:§!\n -having high average autonomy\n -having high ruler military skill"
+ monthly_geniburgh_mercenary_power:0 "Monthly Reformation Effort"
+ geniburgh_mercenary_power_gain_modifier:0 "Reformation Effort Modifier"
  geniburgh_decrease_power:0 "Raise the Recruits"
  geniburgh_spend_power_for_modifier:0 "Bribe local rulers"
  NAR_bribed_local_rulers:0 "Bribe local rulers"
