--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -4,3 +4,6 @@
  estate_ratsunikud:0 "Ratsunikud"
  estate_kakigos:0 "Kakigos"
  estate_usra_clans:0 "Afradusran"
+ estate_amagarians:0 "Amagarians"
+ estate_amagari:0 "Amagari"
+ estate_amagaris:0 "Amagaris"
