--- a/localisation/domination_l_english.yml
+++ b/localisation/domination_l_english.yml
@@ -3945,7 +3945,7 @@
  estate_cossacks_freedom_of_the_steppes_gt:0 "Every owned §YSteppes§! province gains the following bonus:"
  estate_cossacks_freedom_of_the_steppes_rt:0 "The modifier '§YFreedom of the Steppes§!' is removed from all §YSteppes§! provinces."
  estate_cossacks_freedom_of_the_steppes_mod:0 "Freedom of the Steppes"
- desc_estate_cossacks_freedom_of_the_steppes_mod:0 "This province is completely self-governed by the Cossacks."
+ desc_estate_cossacks_freedom_of_the_steppes_mod:0 "This province is completely self-governed by the [Root.GetCossacksName]."
  estate_cossacks_grant_military_leadership:0 "[Root.GetCossacksName] Military Leadership"
  estate_cossacks_grant_military_leadership_desc:1 "The [Root.GetCossacksName] are excellent warriors and leaders. It is only natural that we should grant them a chance to prove themselves as military advisors for our armies."
  estate_cossacks_military_service:0 "[Root.GetCossacksName] Military Service"
@@ -5059,7 +5059,7 @@
  flavor_rus.307.a:0 "Ignore these concerns"
  flavor_rus.307.b:0 "Introduce the Serfdom"
  flavor_rus.308.t:0 "The Great Uprising!"
- flavor_rus.308.desc:0 "Despite all governmental efforts to pacify the masses with any mean necessary, the serfs have disobeyed their masters and have met in [revolt_province.GetName] to start an open rebellion against the [Root.Monarch.GetTitle]. Led by displaced Cossacks, these rebels question [Root.Monarch.GetName]'s legitimacy. This uprising motivated many others of the commoners to revolt against the ruling class..."
+ flavor_rus.308.desc:0 "Despite all governmental efforts to pacify the masses with any mean necessary, the serfs have disobeyed their masters and have met in [revolt_province.GetName] to start an open rebellion against the [Root.Monarch.GetTitle]. Led by displaced [Root.GetCossacksName], these rebels question [Root.Monarch.GetName]'s legitimacy. This uprising motivated many others of the commoners to revolt against the ruling class..."
  flavor_rus.308.a:0 "The masses are moving..."
  flavor_rus.308.a.tt:1 "Every owned province in the §YRussia§!, §YRuthenia§!, §YUral§! and §YPontic Steppe§! region which produces §YGrain§!, §YLivestock§! or §YWool§! gains the following effects:"
  flavor_rus.309.t:0 "Rise of the Burgher Class"
