--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
  PROV1:0 "Geniburgh"
  PROV2:0 "Linamaco"
- PROV3:0 "Prov3"
- PROV4:0 "Prov4"
+ PROV3:0 "Prov3" #!
+ PROV4:0 "Prov4"  #!
  PROV5:0 "Ehrenstadt"
  PROV6:0 "Kerborn"
  PROV7:0 "Njuhccamavran Bay"
@@ -826,7 +826,7 @@
  PROV825:0 "Bearràrd"
  PROV826:0 "Sinea"
  PROV827:0 "Ithadeagu"
- PROV828:0 "828"
+ PROV828:0 "Western Frontier Sea"
  PROV829:0 "Geoberic Plateau"
  PROV830:0 "Dhan"
  PROV831:0 "Bhaithar"
@@ -942,8 +942,8 @@
  PROV941:0 "Massotte"
  PROV942:0 "Itoento"
  PROV943:0 "Dentani"
- PROV944:0 "944"
- PROV945:0 "945"
+ PROV944:0 "Eastern Frontier Sea"
+ PROV945:0 "Agellid Crack"
  PROV946:0 "Toranna"
  PROV947:0 "Alaienne"
  PROV948:0 "Rinerate"
@@ -1024,7 +1024,7 @@
  PROV1023:0 "Amnodos"
  PROV1024:0 "Fawud"
  PROV1025:0 "Meros"
- PROV1026:0 "1026"
+ PROV1026:0 "Samtzar"
  PROV1027:0 "mumtalakat" #estate
  PROV1028:0 "Mazar Eyina" #Tomb Eyina
  PROV1029:0 "Arctic Sea"
@@ -1069,7 +1069,7 @@
  PROV1068:0 "Matjar Aljamal" #shop camel
  PROV1069:0 "Alaikhtisar" #shortcut
  PROV1070:0 "Nasrya"
- PROV1071:0 "1071"
+ PROV1071:0 "Kushusal"
  PROV1072:0 "1072"
  PROV1073:0 "1073"
  PROV1074:0 "1074"
@@ -1150,7 +1150,7 @@
  PROV1149:0 "1149"
  PROV1150:0 "1150"
  PROV1151:0 "1151"
- PROV1152:0 "1152"
+ PROV1152:0 "Qaravakh"
  PROV1153:0 "1153"
  PROV1154:0 "Qarasam Sea"
  PROV1155:0 "1155"
@@ -1174,12 +1174,12 @@
  PROV1173:0 "1173"
  PROV1174:0 "1174"
  PROV1175:0 "1175"
- PROV1176:0 "1176"
- PROV1177:0 "1177"
+ PROV1176:0 "Gogirdas"
+ PROV1177:0 "Vazhakal"
  PROV1178:0 "Sikhraval"
  PROV1179:0 "1179"
- PROV1180:0 "1180"
- PROV1181:0 "1181"
+ PROV1180:0 "Gridzelitba"
+ PROV1181:0 "Mshivar"
  PROV1182:0 "1182"
  PROV1183:0 "1183"
  PROV1184:0 "1184"
@@ -1251,21 +1251,21 @@
  PROV1250:0 "Anavols"
  PROV1251:0 "Thramptus"
  PROV1252:0 "Kedipol"
- PROV1253:0 "1253"
- PROV1254:0 "1254"
- PROV1255:0 "1255"
- PROV1256:0 "1256"
- PROV1257:0 "1257"
+ PROV1253:0 "Garpord"
+ PROV1254:0 "Guzrat"
+ PROV1255:0 "Maravit"
+ PROV1256:0 "Teimutsike"
+ PROV1257:0 "1257" #!
  PROV1258:0 "Dasarali"
  PROV1259:0 "Dasarali"
  PROV1260:0 "Malagosans"
- PROV1261:0 "1261"
- PROV1262:0 "1262"
- PROV1263:0 "1263"
+ PROV1261:0 "Shimgav"
+ PROV1262:0 "Lake Srushta"
+ PROV1263:0 "Ghvtisali"
  PROV1264:0 "Kastopsil"
- PROV1265:0 "1265"
+ PROV1265:0 "Kashir"
  PROV1266:0 "Palofos"
- PROV1267:0 "1267"
+ PROV1267:0 "Digacopians"
  PROV1268:0 "Duxaz"
  PROV1269:0 "Xrizamat"
  PROV1270:0 "Pernalos"
@@ -1297,18 +1297,18 @@
  PROV1296:0 "Deliepolis"
  PROV1297:0 "Vashira"
  PROV1298:0 "Matserval"
- PROV1299:0 "1299"
- PROV1300:0 "1300"
- PROV1301:0 "1301"
- PROV1302:0 "1302"
+ PROV1299:0 "Svirekh"
+ PROV1300:0 "Bunakad"
+ PROV1301:0 "Dzvelikleda"
+ PROV1302:0 "Martskhiro"
  PROV1303:0 "Yetzan"
  PROV1304:0 "Brakhuti"
  PROV1305:0 "Maghalak"
  PROV1306:0 "Wadibax"
- PROV1307:0 "1307"
+ PROV1307:0 "Vertskhlisma"
  PROV1308:0 "1308"
  PROV1309:0 "1309"
- PROV1310:0 "1310"
+ PROV1310:0 "Belakedel"
  PROV1311:0 "1311"
  PROV1312:0 "Uzwardan"
  PROV1313:0 "1313"
@@ -1333,10 +1333,10 @@
  PROV1332:0 "1332"
  PROV1333:0 "1333"
  PROV1334:0 "1334"
- PROV1335:0 "1335"
+ PROV1335:0 "Digacopians"
  PROV1336:0 "1336"
  PROV1337:0 "1337"
- PROV1338:0 "1338"
+ PROV1338:0 "Nesmin"
  PROV1339:0 "1339"
  PROV1340:0 "1340"
  PROV1341:0 "1341"
@@ -1559,7 +1559,7 @@
  PROV1558:0 "1558"
  PROV1559:0 "1559"
  PROV1560:0 "1560"
- PROV1561:0 "1561"
+ PROV1561:0 "Northern Frontier Sea"
  PROV1562:0 "1562"
  PROV1563:0 "1563"
  PROV1564:0 "1564"
@@ -1701,39 +1701,39 @@
  PROV1700:0 "Tinepijk"
  PROV1701:0 "Numegemzid"
  PROV1702:0 "Emuward"
- PROV1703:0 "1703"
+ PROV1703:0 "Vakrunti"
  PROV1704:0 "Dasvabena"
- PROV1705:0 "1705"
- PROV1706:0 "1706"
+ PROV1705:0 "Mazbad"
+ PROV1706:0 "Brudzakar"
  PROV1707:0 "1707"
- PROV1708:0 "1708"
+ PROV1708:0 "Akhalivan"
  PROV1709:0 "Davirat"
- PROV1710:0 "1710"
+ PROV1710:0 "Dmainisi"
  PROV1711:0 "1711"
- PROV1712:0 "1712"
- PROV1713:0 "1713"
- PROV1714:0 "1714"
- PROV1715:0 "1715"
- PROV1716:0 "1716"
- PROV1717:0 "1717"
- PROV1718:0 "1718"
+ PROV1712:0 "Dzvelikosh"
+ PROV1713:0 "Tetrigor"
+ PROV1714:0 "Bezaq"
+ PROV1715:0 "Abujman"
+ PROV1716:0 "Akhakal" 
+ PROV1717:0 "1717" #!
+ PROV1718:0 "1718" #1
  PROV1719:0 "1719"
- PROV1720:0 "1720"
- PROV1721:0 "1721"
- PROV1722:0 "1722"
+ PROV1720:0 "Karisavela"
+ PROV1721:0 "Karwazi"
+ PROV1722:0 "Marilaq"
  PROV1723:0 "1723"
  PROV1724:0 "1724"
- PROV1725:0 "1725"
- PROV1726:0 "1726"
- PROV1727:0 "1727"
- PROV1728:0 "1728"
- PROV1729:0 "1729"
- PROV1730:0 "1730"
- PROV1731:0 "1731"
- PROV1732:0 "1732"
- PROV1733:0 "1733"
- PROV1734:0 "1734"
- PROV1735:0 "1735"
+ PROV1725:0 "Tsekhlikha"
+ PROV1726:0 "Lurjinagh"
+ PROV1727:0 "Gartadzar"
+ PROV1728:0 "Kranchark"
+ PROV1729:0 "Etzar"
+ PROV1730:0 "Okrodartqa"
+ PROV1731:0 "White Bay"
+ PROV1732:0 "Sigerad's Pass"
+ PROV1733:0 "Gazapkhar"
+ PROV1734:0 "Dzegav"
+ PROV1735:0 "Makvar"
  PROV1736:0 "1736"
  PROV1737:0 "1737"
  PROV1738:0 "1738"
