council of tiepol

--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -14,7 +14,12 @@
  liemarian.3.t:0 "Spread of a new faith"
  liemarian.3.desc:0 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
  liemarian.3.a:0 "Maybe they are right..."
- liemarian.3.b:0 "This will blew over"
+ liemarian.3.b:0 "This will blow over"
+ liemarian.4.t:0 "Council of Tiepol"
+ liemarian.4.desc:0 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+ liemarian.4.a:0 "Let the Council commence."
+ settle_the_doctrine_title:0 "Settle the Doctrines"
+ settle_the_doctrine_desc:0 "As the liemarian community grows the cracks are being slowly revealed. Many rulers see our faith as a way to gain autonomy from the emperor, while other seek only absolute power. With many branches drifting away we need to bring them back together."
 
  mobilisation_against_evil:0 "Mobilization Against Evil"
  mobilisation_against_evil_DESC:0 "To free the world from evil we need to fight not only in teological duels, but also in earthly battles."
