prov names and dev rebalance

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -223,7 +223,7 @@
  PROV222:0 "Eemaamin"
  PROV223:0 "Lauagusa"
  PROV224:0 "Helasam"
- PROV225:0 "225"
+ PROV225:0 "Bagdur"
  PROV226:0 "Mõgõr"
  PROV227:0 "Pohjanportti"
  PROV228:0 "Kulpulampi"
@@ -254,7 +254,7 @@
  PROV253:0 "Ineko"
  PROV254:0 "Tikene"
  PROV255:0 "Ksiva"
- PROV256:0 "256"
+ PROV256:0 "Ristmaa"
  PROV257:0 "Hänei"
  PROV258:0 "258"
  PROV259:0 "Tätuttänenai"
@@ -282,7 +282,7 @@
  PROV281:0 "Enaistole"
  PROV282:0 "Isineliteka"
  PROV283:0 "Silettenut"
- PROV284:0 "284"
+ PROV284:0 "Eniitolaan"
  PROV285:0 "285"
  PROV286:0 "Lisiin"
  PROV287:0 "Talisai"
@@ -311,15 +311,15 @@
  PROV310:0 "koonduv"
  PROV311:0 "Segenad"
  PROV312:0 "Tivtan Bay"
- PROV313:0 "313"
- PROV314:0 "314"
+ PROV313:0 "Hurkhzan"
+ PROV314:0 "Karisar"
  PROV315:0 "Sadamainult"
  PROV316:0 "Veiniistandus"
- PROV317:0 "317"
+ PROV317:0 "Bukutyer"
  PROV318:0 "Välismaalane"
  PROV319:0 "Piirilinn"
  PROV320:0 "Kõrbes"
- PROV321:0 "321"
+ PROV321:0 "Oslugor"
  PROV322:0 "Niheyabdan Sea"
  PROV323:0 "Karusalu"
  PROV324:0 "Kõla"
@@ -328,14 +328,14 @@
  PROV327:0 "Mutovian Bay"
  PROV328:0 "Pühakoda"
  PROV329:0 "Pruumets"
- PROV330:0 "330"
- PROV331:0 "331"
- PROV332:0 "332"
+ PROV330:0 "Musornaq"
+ PROV331:0 "Quusak"
+ PROV332:0 "Meyadaq"
  PROV333:0 "Furmarian Sea"
  PROV334:0 "Sinisaar"
  PROV335:0 "Ristumaa"
- PROV336:0 "336"
- PROV337:0 "337"
+ PROV336:0 "Kultargaan"
+ PROV337:0 "Siriniid"
  PROV338:0 "Salin"
  PROV339:0 "Pariali"
  PROV340:0 "Tigacij"
@@ -380,7 +380,7 @@
  PROV379:0 "379"
  PROV380:0 "380"
  PROV381:0 "381"
- PROV382:0 "382"
+ PROV382:0 "Bagarca"
  PROV383:0 "383"
  PROV384:0 "384"
  PROV385:0 "385"
@@ -1306,10 +1306,10 @@
  PROV1305:0 "Maghalak"
  PROV1306:0 "Wadibax"
  PROV1307:0 "Vertskhlisma"
- PROV1308:0 "1308"
- PROV1309:0 "1309"
+ PROV1308:0 "Naghichark"
+ PROV1309:0 "Kumgeli"
  PROV1310:0 "Belakedel"
- PROV1311:0 "1311"
+ PROV1311:0 "Wartlav"
  PROV1312:0 "Uzwardan"
  PROV1313:0 "1313"
  PROV1314:0 "Asonam"
@@ -1321,7 +1321,7 @@
  PROV1320:0 "Qarum"
  PROV1321:0 "Faramqars"
  PROV1322:0 "Qarosan"
- PROV1323:0 "1323"
+ PROV1323:0 "Sarazan"
  PROV1324:0 "1324"
  PROV1325:0 "1325"
  PROV1326:0 "1326"
@@ -1823,7 +1823,7 @@
  PROV1822:0 "1822"
  PROV1823:0 "1823"
  PROV1824:0 "1824"
- PROV1825:0 "1825"
+ PROV1825:0 " Visidanba Lake"
  PROV1826:0 "1826"
  PROV1827:0 "1827"
  PROV1828:0 "1828"
@@ -2007,17 +2007,17 @@
  PROV2006:0 "Harishvatra"
  PROV2007:0 "Zaytarun"
  PROV2008:0 "Gaonaqah"
- PROV2009:0 "2009"
- PROV2010:0 "2010"
+ PROV2009:0 "Hax"
+ PROV2010:0 "Kerepashash"
  PROV2011:0 "Shadawah"
  PROV2012:0 "Nivoshothra"
  PROV2013:0 "Sawsar"
  PROV2014:0 "2014"
  PROV2015:0 "Xatmar"
- PROV2016:0 "2016"
- PROV2017:0 "2017"
- PROV2018:0 "2018"
- PROV2019:0 "2019"
+ PROV2016:0 "Matagam"
+ PROV2017:0 "2017" #!
+ PROV2018:0 "Qarsanish"
+ PROV2019:0 "Ramashtar"
  PROV2020:0 "Meleqars"
  PROV2021:0 "2021"
  PROV2022:0 "Hitraan"
