--- a/localisation/TD_01_flavour_geniburgh_company_l_english.yml
+++ b/localisation/TD_01_flavour_geniburgh_company_l_english.yml
@@ -18,9 +18,12 @@
  monthly_geniburgh_mercenary_power:0 "Monthly Reformation Effort"
  geniburgh_mercenary_power_gain_modifier:0 "Reformation Effort Modifier"
  geniburgh_decrease_power:0 "Raise the Recruits"
+ geniburgh_decrease_power_desc:0 "Conscript new soldiers from the nearby settlements."
  geniburgh_spend_power_for_modifier:0 "Bribe local rulers"
+ geniburgh_spend_power_for_modifier_desc:0 "'Convince' lords of these lands to submit to our will."
  NAR_bribed_local_rulers:0 "Bribe local rulers"
  geniburgh_increase_power:0 "Invest in the Administration"
+ geniburgh_increase_power_desc:0 "Increase our efforts in establishing nation-wide administration."
  NAR_Reform_into_a_real_country_TT:0 "§YGeniburgh Company§! will get an event to reform into §YNiewebehatland§!."
  geniburgh_company.1.t:0 "Assuming Kakigian Identity"
  geniburgh_company.1.desc:0 "As we settle into this new and strange land, it becomes clear that we have grown beyond a mere mercenary company. We now need to embrace our new identity."
